[feature] Removing rows from DROID CSV.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -21,3 +21,4 @@ Repository=Other
 [additional values]
 
 descriptiontext = The date and time that this file was last modified was:
+pathmask = file:/C:/Documents%20and%20Settings/spencero/Desktop/
