[feature] Correct mapping alignment and input for 'static' values.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -7,8 +7,8 @@ Description=LAST_MODIFIED
 
 [static values]
 
-Missing Comment=AANH
-Agency=7505
+Agency=AANH
+Actual Series=7505
 Restriction Status=0
 Preservation=Issuable
 Record Type=Not determined
