--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -21,4 +21,4 @@ Repository=Other
 [additional values]
 
 descriptiontext = The date and time that this file was last modified was:
-pathmask = file:/C:/Documents%20and%20Settings/spencero/Desktop/
+pathmask = C:\Documents and Settings\spencero\Desktop\
