--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -7,18 +7,18 @@ Description=LAST_MODIFIED
 
 [static values]
 
-Agency=AANH
-Actual Series=7505
+Agency=AEZB
+Actual Series=22090
 Restriction Status=0
 Preservation=Issuable
 Record Type=Not determined
 Public View=yes
 Item Level=Item
-Accession No.=E4
-Repository Reference=7505
+Accession No.=E1
+Repository Reference=22090
 Repository=Other
 
 [additional values]
 
 descriptiontext = The date and time that this file was last modified was:
-pathmask = C:\Documents and Settings\spencero\Desktop\
+pathmask = Z:\E_Accession_distilled\Mahara Okeroa - E1\E1\
