[config] Correct configuration values.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -9,7 +9,7 @@ Description=LAST_MODIFIED
 
 Agency=AEZB
 Actual Series=22090
-Restriction Status=0
+Restriction Status=O
 Preservation=Issuable
 Record Type=Not determined
 Public View=yes
