[config] Correct mapping values.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -15,7 +15,7 @@ Record Type=Not determined
 Public View=yes
 Item Level=Item
 Accession No.=E1
-Repository Reference=22090
+Final Series=22090
 Repository=Other
 
 [additional values]
