--- a/rosetta-csv-mapping.cfg
+++ b/rosetta-csv-mapping.cfg
@@ -27,3 +27,14 @@ O=1916130
 [droid mapping]
 
 File Name=NAME
+
+[rosetta csv fields]  
+#rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
+#NOTE: No spaces allowed between lists
+#TODO: Possibly allow spaces between lists
+
+CSVSECTIONS=IE,REPRESENTATION,FILE
+
+IE = Title,Access,Archway Identifier for publishing,Archway Identifier Type,Archway Identifier Value,Series,Agency,Entity Type,Submission Reason
+REPRESENTATION = Revision Number,Usage Type,Preservation Type
+FILE = File Location,File Original Path,File Name,File fixity type,File fixity value
