--- a/rosetta-csv-mapping.cfg
+++ b/rosetta-csv-mapping.cfg
@@ -1,12 +1,18 @@
 [rosetta mapping]
 
+#rosetta field on the left
+#export field on the right
+
 Title=Title
-Access=Restriction
+Access=Restriction Status
 Archway Identifier for publishing=Item Code
 Archway Identifier Value=Item Code
 Series=Final Series
 Agency=Transferring Agency
-File Location=Sub-series   # Needs to be combined with DROID 'NAME'
+
+#needs to be combined with DROID NAME
+File Location=Sub-Series   
+
 File Original Path=Sub-Series
 File fixity value=MD5 value
 
