[bugfix] Row generation went awry, but fixed.

--- a/rosetta-csv-mapping.cfg
+++ b/rosetta-csv-mapping.cfg
@@ -9,10 +9,6 @@ Archway Identifier for publishing=Item Code
 Archway Identifier Value=Item Code
 Series=Final Series
 Agency=Transferring Agency
-
-#needs to be combined with DROID NAME
-File Location=Sub-Series   
-
 File Original Path=Sub-Series
 File fixity value=MD5 value
 
@@ -33,6 +29,8 @@ O=1916130
 [droid mapping]
 
 File Name=NAME
+File Location=FILE_PATH
+File Original Path=FILE_PATH
 
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
