[config] Pathmask value added for handling DROID path.

--- a/rosetta-csv-mapping.cfg
+++ b/rosetta-csv-mapping.cfg
@@ -32,6 +32,10 @@ File Name=NAME
 File Location=FILE_PATH
 File Original Path=FILE_PATH
 
+[path values]
+
+pathmask=Z:\E_Accession_distilled\Mahara Okeroa - E1\E1\
+
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
 #NOTE: No spaces allowed between lists
