[config] Correct mapping.

--- a/rosetta-csv-mapping.cfg
+++ b/rosetta-csv-mapping.cfg
@@ -4,12 +4,14 @@
 #export field on the right
 
 Title=Title
+
+#Access maps to next section to enable multiple access mappings
 Access=Restriction Status
+
 Archway Identifier for publishing=Item Code
 Archway Identifier Value=Item Code
 Series=Final Series
 Agency=Transferring Agency
-File Original Path=Sub-Series
 File fixity value=MD5 value
 
 [static values]
@@ -24,6 +26,7 @@ File fixity type=MD5
 
 [access values]
 
+#Access maps to this section to enable multiple access mappings
 O=1916130
 
 [droid mapping]
