--- a/rosetta-csv-mapping.cfg
+++ b/rosetta-csv-mapping.cfg
@@ -37,7 +37,7 @@ File Original Path=FILE_PATH
 
 [path values]
 
-pathmask=Z:\E_Accession_distilled\Mahara Okeroa - E1\E1\
+pathmask=Z:\E_Accession_distilled\Mahara Okeroa - E1\
 
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
