[feature] Handling 1:1 export mapping md5 value replaced for missing comment.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -7,18 +7,18 @@ Description=LAST_MODIFIED
 
 [static values]
 
-Agency=AEZB
-Actual Series=22090
+Agency=AANH
+Actual Series=7505
 Restriction Status=O
 Preservation=Issuable
 Record Type=Not determined
 Public View=yes
 Item Level=Item
 Accession No.=E1
-Final Series=22090
+Final Series=7505
 Repository=Other
 
 [additional values]
 
 descriptiontext = The date and time that this file was last modified was:
-pathmask = Z:\E_Accession_distilled\Mahara Okeroa - E1\E1\
+pathmask = Z:\E_Accession_distilled\Peter Dunne - E4\E4\
