--- a/rosetta-csv-mapping.cfg
+++ b/rosetta-csv-mapping.cfg
@@ -12,12 +12,12 @@ Archway Identifier for publishing=Item Code
 Archway Identifier Value=Item Code
 Series=Final Series
 Agency=Transferring Agency
-File fixity value=MD5 value
+File fixity value=Missing Comment
 
 [static values]
 
 Archway Identifier Type=ArchwayUniqueID
-Entity Type=ANZ_NotDetermined
+Entity Type=ANZ_BornDigital
 Submission Reason=DigitalTransfer
 Revision Number=1
 Usage Type=VIEW
@@ -37,7 +37,7 @@ File Original Path=FILE_PATH
 
 [path values]
 
-pathmask=Z:\E_Accession_distilled\Mahara Okeroa - E1\
+pathmask=Z:\E_Accession_distilled\Mahara Okeroa - E1\rsE1\
 
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
