[config] Digital repository mappings.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -1,4 +1,4 @@
-﻿[droid mapping]
+[droid mapping]
 
 Missing Comment=MD5_HASH
 Sub-Series=FILE_PATH
@@ -9,14 +9,14 @@ Description=LAST_MODIFIED
 
 Agency=AANH
 Actual Series=7505
-Restriction Status=O
+Restriction Status=
 Preservation=Issuable
 Record Type=Not determined
 Public View=yes
 Item Level=Item
 Accession No.=E4
 Final Series=7505
-Repository=Other
+Repository=Digital
 
 [additional values]
 
