[config] Correct digital repository values.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -16,7 +16,7 @@ Public View=yes
 Item Level=Item
 Accession No.=E4
 Final Series=7505
-Repository=Digital
+Repository=Digital Repository
 
 [additional values]
 
