[refactor] re-working values for ANZ ingest.

--- a/rosetta-csv-mapping-events.cfg
+++ b/rosetta-csv-mapping-events.cfg
@@ -3,8 +3,16 @@
 #rosetta field on the left
 #export field on the right
 
-Title=NAME
-File fixity value=MD5_HASH
+Title=Title
+
+#Access maps to next section to enable multiple access mappings
+Access=Restriction Status
+
+Archway Identifier for publishing=Item Code
+Archway Identifier Value=Item Code
+Series=Final Series
+Agency=Transferring Agency
+File fixity value=Missing Comment
 
 [static values]
 
@@ -16,15 +24,6 @@ Usage Type=VIEW
 Preservation Type=PRESERVATION_MASTER
 File fixity type=MD5
 
-#Fields normally from export sheet
-
-#Access maps to next section to enable multiple access mappings
-Access=1916130
-Archway Identifier for publishing=R20402040
-Archway Identifier Value=R20402040
-Series=2040
-Agency=TESTCSV
-
 #If events do this...
 
 Digital Original=TRUE
@@ -33,6 +32,10 @@ Event Identifier Value=EXT_1
 Event Type=CREATION
 Event Description=Provenance Note
 
+[access values]
+
+#Access maps to this section to enable multiple access mappings
+O=1916130
 
 [droid mapping]
 
@@ -42,12 +45,14 @@ File Original Path=FILE_PATH
 
 [path values]
 
-pathmask=C:\working\
+pathmask=Z:\E_Accession_distilled\Peter Dunne - E4\
 
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
 #NOTE: No spaces allowed between lists
 #TODO: Possibly allow spaces between lists
+
+CSVSECTIONS=IE,REPRESENTATION,FILE
 
 CSVSECTIONS=IE,REPRESENTATION,FILE
 
