[feature] Handling of events columns in CSV.

--- a/rosetta-csv-mapping-events.cfg
+++ b/rosetta-csv-mapping-events.cfg
@@ -24,13 +24,21 @@ Usage Type=VIEW
 Preservation Type=PRESERVATION_MASTER
 File fixity type=MD5
 
-#If events do this...
+#If events do this... Leave blank to manually add provenance (default)
 
 Digital Original=TRUE
-Event Identifier Type=EXTERNAL
-Event Identifier Value=EXT_1
-Event Type=CREATION
-Event Description=Provenance Note
+Event Identifier Type=
+Event Identifier Value=
+Event Type=
+Event Description=
+
+#Ideal defaults
+
+#Digital Original=TRUE
+#Event Identifier Type=EXTERNAL
+#Event Identifier Value=EXT_1
+#Event Type=CREATION
+#Event Description=Provenance Note
 
 [access values]
 
@@ -51,8 +59,6 @@ pathmask=Z:\E_Accession_distilled\Peter Dunne - E4\
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
 #NOTE: No spaces allowed between lists
 #TODO: Possibly allow spaces between lists
-
-CSVSECTIONS=IE,REPRESENTATION,FILE
 
 CSVSECTIONS=IE,REPRESENTATION,FILE
 
