--- a/rosetta-csv-mapping-events.cfg
+++ b/rosetta-csv-mapping-events.cfg
@@ -53,7 +53,7 @@ File Original Path=FILE_PATH
 
 [path values]
 
-pathmask=Z:\E_Accession_distilled\Peter Dunne - E4\
+pathmask=B:\distilled\Mahara Okeroa - E1\
 
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
@@ -63,5 +63,5 @@ pathmask=Z:\E_Accession_distilled\Peter Dunne - E4\
 CSVSECTIONS=IE,REPRESENTATION,FILE
 
 IE = Title,Access,Archway Identifier for publishing,Archway Identifier Type,Archway Identifier Value,Series,Agency,Entity Type,Submission Reason
-REPRESENTATION = Revision Number,Usage Type,Preservation Type,Digital Original
-FILE = File Location,File Original Path,File Name,File fixity type,File fixity value,Event Identifier Type,Event Identifier Value,Event Type,Event Description
+REPRESENTATION = Revision Number,Usage Type,Preservation Type,Digital Original,Event Identifier Type,Event Identifier Value,Event Type,Event Description
+FILE = File Location,File Original Path,File Name,File fixity type,File fixity value
