[bugfix] Event information put at IE level (not representation).

--- a/rosetta-csv-mapping-events.cfg
+++ b/rosetta-csv-mapping-events.cfg
@@ -31,6 +31,16 @@ Event Identifier Type=
 Event Identifier Value=
 Event Type=
 Event Description=
+Event Date=
+Event Outcome1=
+Event Outcome Detail1=
+Event Outcome Detail Extension1=
+Event Outcome2=
+Event Outcome Detail2=
+Event Outcome Detail Extension2=
+Event Outcome3=
+Event Outcome Detail3=
+Event Outcome Detail Extension3=
 
 #Ideal defaults
 
@@ -62,6 +72,6 @@ pathmask=B:\distilled\Mahara Okeroa - E1\
 
 CSVSECTIONS=IE,REPRESENTATION,FILE
 
-IE = Title,Access,Archway Identifier for publishing,Archway Identifier Type,Archway Identifier Value,Series,Agency,Entity Type,Submission Reason
-REPRESENTATION = Revision Number,Usage Type,Preservation Type,Digital Original,Event Identifier Type,Event Identifier Value,Event Type,Event Description
+IE = Title,Access,Archway Identifier for publishing,Archway Identifier Type,Archway Identifier Value,Series,Agency,Entity Type,Submission Reason,Event Identifier Type,Event Identifier Value,Event Type,Event Description,Event Date,Event Outcome1,Event Outcome Detail1,Event Outcome Detail Extension1,Event Outcome2,Event Outcome Detail2,Event Outcome Detail Extension2,Event Outcome3,Event Outcome Detail3,Event Outcome Detail Extension3
+REPRESENTATION = Revision Number,Usage Type,Preservation Type,Digital Original
 FILE = File Location,File Original Path,File Name,File fixity type,File fixity value
