[feature] Output UTF-8 BOM for rosetta ingest sheet.

--- a/rosetta-csv-mapping-events.cfg
+++ b/rosetta-csv-mapping-events.cfg
@@ -63,7 +63,7 @@ File Original Path=FILE_PATH
 
 [path values]
 
-pathmask=B:\distilled\Mahara Okeroa - E1\
+pathmask=X:\distilled\Mahara Okeroa - E1\
 
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
