[config] Config for E1 accession.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -7,18 +7,18 @@ Description=LAST_MODIFIED
 
 [static values]
 
-Agency=AANH
-Actual Series=7505
+Agency=AEZB
+Actual Series=22090
 Restriction Status=
 Preservation=Issuable
 Record Type=Not determined
 Public View=yes
 Item Level=Item
-Accession No.=E4
-Final Series=7505
-Repository=Digital Repository
+Accession No.=E1
+Final Series=22090
+Repository=Other
 
 [additional values]
 
 descriptiontext = The date and time that this file was last modified was:
-pathmask = Z:\E_Accession_distilled\Peter Dunne - E4\E4\
+pathmask = X:\distilled\Mahara Okeroa - E1\
