[config] Modifying path-mask.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -21,4 +21,4 @@ Repository=Other
 [additional values]
 
 descriptiontext = The date and time that this file was last modified was:
-pathmask = X:\distilled\Mahara Okeroa - E1\
+pathmask = X:\distilled\Mahara Okeroa - E1\E1\
