--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -7,18 +7,18 @@ Description=LAST_MODIFIED
 
 [static values]
 
-Agency=AEZB
-Actual Series=22090
-Restriction Status=
+Agency=AANH
+Actual Series=7505
+Restriction Status= O
 Preservation=Issuable
 Record Type=Not determined
 Public View=yes
 Item Level=Item
-Accession No.=E1
-Final Series=22090
-Repository=Other
+Accession No.=E4
+Final Series=7505
+Repository=Digital
 
 [additional values]
 
 descriptiontext = The date and time that this file was last modified was:
-pathmask = X:\distilled\Mahara Okeroa - E1\E1\
+pathmask = X:\distilled\Peter Dunne - E4\E4\
