[ignore] Setting a pathmask.

--- a/rosetta-csv-mapping-events.cfg
+++ b/rosetta-csv-mapping-events.cfg
@@ -65,7 +65,7 @@ File Original Path=FILE_PATH
 
 [path values]
 
-pathmask=X:\distilled\Peter Dunne - E4\
+pathmask=C:\Documents and Settings\spencero\Desktop\processing-workshop\Mahara Okeroa - E1 - distilled\
 
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
