[bugfix] Configuration of Archway Import configuration.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -7,18 +7,19 @@ Description=LAST_MODIFIED
 
 [static values]
 
-Agency=AEZB
-Actual Series=22090
+Agency=ACHF
+Actual Series=21947
 Restriction Status=O
 Preservation=Issuable
 Record Type=Not determined
 Public View=yes
 Item Level=Item
-Accession No.=E1
-Final Series=22090
+Accession No.=E2
+Final Series=21947
 Repository=Digital
 
 [additional values]
 
 descriptiontext = The date and time that this file was last modified was:
-pathmask = C:\Documents and Settings\spencero\Desktop\processing-workshop\Mahara Okeroa - E1 - distilled\E1\
+#pathmask = Z:\E-Accession_copies_from_dpprod\Judith Tizard - E2\E2\
+pathmask=X:\distilled\Judith Tizard - E2\E2\
