[bugfix] Fixing provenance capability in generator.

--- a/rosetta-csv-mapping-events.cfg
+++ b/rosetta-csv-mapping-events.cfg
@@ -29,20 +29,21 @@ File fixity type=MD5
 #If events do this... Leave blank to manually add provenance (default)
 
 Digital Original=TRUE
-Event Identifier Type=
-Event Identifier Value=
-Event Type=
-Event Description=
-Event Date=
-Event Outcome1=
-Event Outcome Detail1=
-Event Outcome Detail Extension1=
-Event Outcome2=
-Event Outcome Detail2=
-Event Outcome Detail Extension2=
-Event Outcome3=
-Event Outcome Detail3=
-Event Outcome Detail Extension3=
+
+#Event Identifier Type=
+#Event Identifier Value=
+#Event Type=
+#Event Description=
+#Event Date=
+#Event Outcome1=
+#Event Outcome Detail1=
+#Event Outcome Detail Extension1=
+#Event Outcome2=
+#Event Outcome Detail2=
+#Event Outcome Detail Extension2=
+#Event Outcome3=
+#Event Outcome Detail3=
+#Event Outcome Detail Extension3=
 
 #Ideal defaults
 
