[feature] Creating subseries (path)mask.

--- a/rosetta-csv-mapping-events.cfg
+++ b/rosetta-csv-mapping-events.cfg
@@ -71,6 +71,7 @@ File Original Path=FILE_PATH
 [path values]
 
 pathmask=C:\Documents and Settings\spencero\Desktop\processing-workshop\Mahara Okeroa - E1 - distilled\
+subseriesmask=C:\Documents and Settings\spencero\Desktop\processing-workshop\Mahara Okeroa - E1 - distilled\E1\
 
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
