--- a/rosetta-csv-mapping.cfg
+++ b/rosetta-csv-mapping.cfg
@@ -40,6 +40,7 @@ File Original Path=FILE_PATH
 [path values]
 
 pathmask=X:\distilled\Peter Dunne - E4\
+subseriesmask=X:\distilled\Peter Dunne - E4\E4\
 
 [rosetta csv fields]  
 #rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
