[feature] Config to add LAST_MODIFIED to ingest sheet.

--- a/rosetta-csv-mapping.cfg
+++ b/rosetta-csv-mapping.cfg
@@ -36,6 +36,7 @@ O=1916130
 File Name=NAME
 File Location=FILE_PATH
 File Original Path=FILE_PATH
+Modification Date=LAST_MODIFIED
 
 [path values]
 
@@ -51,4 +52,4 @@ CSVSECTIONS=IE,REPRESENTATION,FILE
 
 IE = Title,Access,Archway Identifier for publishing,Archway Identifier Type,Archway Identifier Value,Series,Agency,Entity Type,Submission Reason
 REPRESENTATION = Revision Number,Usage Type,Preservation Type
-FILE = File Location,File Original Path,File Name,File fixity type,File fixity value
+FILE = File Location,File Original Path,File Name,File fixity type,File fixity value,Modification Date,Creation Date
