--- a/rosetta-csv-mapping-events.cfg
+++ b/rosetta-csv-mapping-events.cfg
@@ -67,6 +67,7 @@ O=1916130
 File Name=NAME
 File Location=FILE_PATH
 File Original Path=FILE_PATH
+Modification Date=LAST_MODIFIED
 
 [path values]
 
@@ -82,4 +83,4 @@ CSVSECTIONS=IE,REPRESENTATION,FILE
 
 IE = Title,Access,Archway Identifier for publishing,Archway Identifier Type,Archway Identifier Value,Series,Agency,Entity Type,Submission Reason,Event Identifier Type,Event Identifier Value,Event Type,Event Description,Event Date,Event Outcome1,Event Outcome Detail1,Event Outcome Detail Extension1,Event Outcome2,Event Outcome Detail2,Event Outcome Detail Extension2,Event Outcome3,Event Outcome Detail3,Event Outcome Detail Extension3
 REPRESENTATION = Revision Number,Usage Type,Preservation Type,Digital Original
-FILE = File Location,File Original Path,File Name,File fixity type,File fixity value
+FILE = File Location,File Original Path,File Name,File fixity type,File fixity value,Modification Date,Creation Date
