[config] Removing an erroneous mapping.

--- a/linz-rosetta-csv-mapping.cfg
+++ b/linz-rosetta-csv-mapping.cfg
@@ -10,7 +10,7 @@ singleIE = True
 SIP Title=LINZ Field Books Ingest
 
 #Title=NAME // we can have this mapped from the filename...
-File fixity value=MD5_HASH
+#File fixity value=MD5_HASH
 
 [static values]
 
