--- a/args.cfg
+++ b/args.cfg
@@ -1,7 +1,17 @@
 [arguments]
 
+;process = Ingest or process = Import - Required
+process=ingest 
+
+;title to be sent to stderr to aid users
 title=EAccession Configuration
+
+;minimum requirement of tool is a droid csv and cfg file
 droidexport=akl-registers-droid.csv
 configfile=linz-rosetta-csv-mapping.cfg
+
+;CSV schema, e.g. for import csv, or ingest csv
 schemafile=rosetta-csv-validation-schema-linz.json
+
+;if creating an ingest sheet for Archives NZ we need a list control
 listcontrol=merged-auckland-registers.csv
