[feature] Setting up args.cfg.

--- a/args.cfg
+++ b/args.cfg
@@ -1,7 +1,7 @@
 [arguments]
 
-;process = Ingest or process = Import - Required
-process=ingest 
+;process = Ingest = treu, else create import sheet
+ingest=true 
 
 ;title to be sent to stderr to aid users
 title=EAccession Configuration
