[documentation] CFG documentation.

--- a/args.cfg
+++ b/args.cfg
@@ -1,7 +1,7 @@
 [arguments]
 
-;process = Ingest = treu, else create import sheet
-ingest=true 
+;process = Ingest = treu, else create import sheet (CASE SENSITIVE)
+ingest=True 
 
 ;title to be sent to stderr to aid users
 title=EAccession Configuration
