[documentation] Comments for args file.

--- a/args.cfg
+++ b/args.cfg
@@ -4,7 +4,7 @@
 ingest=True 
 
 ;title to be sent to stderr to aid users
-title=EAccession Configuration
+title=LINZ ingest configuration
 
 ;minimum requirement of tool is a droid csv and cfg file
 droidexport=akl-registers-droid.csv
