[feature] Cover sheet generation.

--- a/args.cfg
+++ b/args.cfg
@@ -1,5 +1,8 @@
 [arguments]
 
+;do we want to create an import sheet cover sheet - series/subseries listing
+coversheet=False
+
 ;process = Ingest = treu, else create import sheet (CASE SENSITIVE)
 ingest=True 
 
