[feature] Framework for XML ingest.

--- a/args.cfg
+++ b/args.cfg
@@ -7,14 +7,17 @@ coversheet=False
 ingest=True 
 
 ;title to be sent to stderr to aid users
-title=LINZ ingest configuration
+title=xml-test
 
 ;minimum requirement of tool is a droid csv and cfg file
-droidexport=akl-registers-droid.csv
-configfile=linz-rosetta-csv-mapping.cfg
+droidexport=e4-droid-v6.1.5.sigv79-container20140923-pre-conditioned.csv
+configfile=e4-PROD-rosetta-csv-mapping-events.cfg
 
 ;CSV schema, e.g. for import csv, or ingest csv
-schemafile=rosetta-csv-validation-schema-linz.json
+schemafile=rosetta-csv-validation-schema-with-events-anz.json
 
 ;if creating an ingest sheet for Archives NZ we need a list control
-listcontrol=merged-auckland-registers.csv
+listcontrol=E4 List Control LC19340 Export CSV Pre-Conditioned.csv
+
+;create an XML SIP?
+xml=False
