[feature] Adding sha1 to code. Fixing a rogue arg indent.

--- a/args.cfg
+++ b/args.cfg
@@ -20,4 +20,4 @@ schemafile=rosetta-csv-validation-schema-with-events-anz.json
 listcontrol=E4 List Control LC19340 Export CSV Pre-Conditioned.csv
 
 ;create an XML SIP?
-xml=False
+xml=True
