--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -1,25 +1,25 @@
 [droid mapping]
 
-Missing Comment=MD5_HASH
+Missing Comment=SHA1_HASH
 Sub-Series=FILE_PATH
 Title=NAME
 Description=LAST_MODIFIED
 
 [static values]
 
-Agency=ACHF
-Actual Series=21947
-Restriction Status=O
+Agency=AAMQ
+Actual Series=21327
+Restriction Status=C
 Preservation=Issuable
 Record Type=Not determined
-Public View=yes
+Public View=No
 Item Level=Item
-Accession No.=E2
-Final Series=21947
+Accession No.=E7
+Final Series=21327
 Repository=Digital
 
 [additional values]
 
 descriptiontext = The date and time that this file was last modified was:
 #pathmask = Z:\E-Accession_copies_from_dpprod\Judith Tizard - E2\E2\
-pathmask=X:\distilled\Judith Tizard - E2\E2\
+pathmask=Z:\Master Copies\Minister Hon. Mita Ririnui - E7\E7\
