[refactor] Preparing for new born digital ingests. Work in progress.

--- a/import-value-mapping.cfg
+++ b/import-value-mapping.cfg
@@ -7,16 +7,17 @@ Description=LAST_MODIFIED
 
 [static values]
 
-Agency=AAMQ
-Actual Series=21327
-Restriction Status=C
+Agency=AFZE
+Actual Series=24138
+Restriction Status=M
 Preservation=Issuable
 Record Type=Not determined
-Public View=No
+Public View=Yes
 Item Level=Item
 Accession No.=E7
-Final Series=21327
-Repository=Digital
+Final Series=24138
+Repository=Digital Repository
+Restriction Expiry=Indefinite
 
 [additional values]
 
