[refactor] making this more useable.

--- a/args.cfg
+++ b/args.cfg
@@ -3,21 +3,22 @@
 ;do we want to create an import sheet cover sheet - series/subseries listing
 coversheet=False
 
-;process = Ingest = treu, else create import sheet (CASE SENSITIVE)
-ingest=True 
+;process = Ingest = true, else create import sheet (CASE SENSITIVE)
+ingest=False
 
 ;title to be sent to stderr to aid users
-title=xml-test
+title=e7-test
 
 ;minimum requirement of tool is a droid csv and cfg file
-droidexport=e4-droid-v6.1.5.sigv79-container20140923-pre-conditioned.csv
-configfile=e4-PROD-rosetta-csv-mapping-events.cfg
+droidexport=e7-droid-distilled-2016-7-11.csv
+impconfig = archway-configs/import-value-mapping.cfg
+configfile=
 
 ;CSV schema, e.g. for import csv, or ingest csv
 schemafile=rosetta-csv-validation-schema-with-events-anz.json
 
 ;if creating an ingest sheet for Archives NZ we need a list control
-listcontrol=E4 List Control LC19340 Export CSV Pre-Conditioned.csv
+listcontrol=
 
 ;create an XML SIP?
-xml=True
+xml=False
