[refactor] Making work for import sheets.

--- a/archway-configs/import-value-mapping.cfg
+++ b/archway-configs/import-value-mapping.cfg
@@ -1,6 +1,6 @@
 [droid mapping]
 
-Missing Comment=SHA1_HASH
+Missing Comment=MD5_HASH
 Sub-Series=FILE_PATH
 Title=NAME
 Description=LAST_MODIFIED
@@ -23,4 +23,4 @@ Restriction Expiry=Indefinite
 
 descriptiontext = The date and time that this file was last modified was:
 #pathmask = Z:\E-Accession_copies_from_dpprod\Judith Tizard - E2\E2\
-pathmask=Z:\Master Copies\Minister Hon. Mita Ririnui - E7\E7\
+pathmask=/mnt/borndigital/distilled/Minister Hon. Mita Ririnui - E7/
