--- a/args.cfg
+++ b/args.cfg
@@ -11,7 +11,12 @@ title=e7-test
 
 ;minimum requirement of tool is a droid csv and cfg file
 droidexport=e7-droid-distilled-2016-7-11.csv
+
+;importconfig
 impconfig = archway-configs/import-value-mapping.cfg
+impschema = archway-schemas/import-csv-schema.json
+
+;rosetta config
 configfile=
 
 ;CSV schema, e.g. for import csv, or ingest csv
