[feature] Setting up for newer transfers.

--- a/rosetta-configs/new-rosetta-csv-mapping.cfg
+++ b/rosetta-configs/new-rosetta-csv-mapping.cfg
@@ -40,16 +40,16 @@ M=1916131
 File Original Name=NAME
 File Original Path=FILE_PATH
 File Modification Date (General File Characteristics)=LAST_MODIFIED
-SHA1=SHA1_HASH
+MD5=MD5_HASH
 
 [path values]
 
-pathmask=Z:\Master Copies\Minister Hon. Mita Ririnui - E7\
-subseriesmask=Z:\Master Copies\Minister Hon. Mita Ririnui - E7\E7\
+pathmask=/mnt/borndigital/distilled/Minister Hon. Mita Ririnui - E7/
+subseriesmask=/mnt/borndigital/distilled/Minister Hon. Mita Ririnui - E7/E7/
 
 [rosetta csv fields]  
 CSVSECTIONS=IE,REPRESENTATION,FILE
 
 IE = Title (DC),Access Rights Policy ID (IE),Archway Unique ID (Object Identifier),Identifier - Archway Unique Id (DC),Archway Series Number,Provenance (dcterms),IE Entity Type,Submission Reason
 REPRESENTATION = Revision Number,Usage Type,Representation Code,Preservation Type,Digital Original
-FILE = File Original Path,File Original Name,File Label,SHA1,File Modification Date (General File Characteristics),File Creation Date (General File Characteristics)
+FILE = File Original Path,File Original Name,File Label,MD5,File Modification Date (General File Characteristics),File Creation Date (General File Characteristics)
