[feature] up-to-date config.

--- a/rosetta-configs/rosetta-csv-mapping-events.cfg
+++ b/rosetta-configs/rosetta-csv-mapping-events.cfg
@@ -1,86 +1,59 @@
-[provenance]
+[application configuration]
 
-file=prov.notes
+#if we're using a provenance note, we need to know the hash column (again!) 
+#so we use this value here
+provhash = MD5
 
 [rosetta mapping]
+#rosetta field on the left, export field on the right
 
-SIP Title=CSV Load
+SIP Title=CAA Ingest
 
-#rosetta field on the left
-#export field on the right
-
-Title=Title
-
-#Access maps to next section to enable multiple access mappings
-Access=Restriction Status
-
-Archway Identifier for publishing=Item Code
-Archway Identifier Value=Item Code
-Series=Final Series
-Agency=Transferring Agency
-File fixity value=Missing Comment
+Title (DC)=Title
+Archway Unique ID (Object Identifier)=Item Code
+Identifier - Archway Unique Id (DC)=Item Code
+Archway Series Number=Final Series
+Provenance (dcterms)=Transferring Agency
+Access Rights Policy ID (IE)=Restriction Status
 
 [static values]
+#values will just get transplanted into the SIP
 
-Archway Identifier Type=ArchwayUniqueID
-Entity Type=ANZ_BornDigital
+IE Entity Type=ANZ_BornDigital
 Submission Reason=DigitalTransfer
 Revision Number=1
 Usage Type=VIEW
-Preservation Type=PRESERVATION_MASTER
-File fixity type=MD5
-
-#If events do this... Leave blank to manually add provenance (default)
-
 Digital Original=TRUE
+File Creation Date (General File Characteristics)=
+Preservation Type=PRESERVATION_MASTER
 
-#Event Identifier Type=
-#Event Identifier Value=
-#Event Type=
-#Event Description=
-#Event Date=
-#Event Outcome1=
-#Event Outcome Detail1=
-#Event Outcome Detail Extension1=
-#Event Outcome2=
-#Event Outcome Detail2=
-#Event Outcome Detail Extension2=
-#Event Outcome3=
-#Event Outcome Detail3=
-#Event Outcome Detail Extension3=
+#Access maps to next section to enable multiple access mappings
+#Can also make static here...
+#Access=
+#Access Rights Policy ID (IE)=
 
-#Ideal defaults
-
-#Digital Original=TRUE
-#Event Identifier Type=EXTERNAL
-#Event Identifier Value=EXT_1
-#Event Type=CREATION
-#Event Description=Provenance Note
+#PROVENANCE
+#IF YOU WANT YOU CAN ADD STATIC VALUES TO THE EVENT FIELDS HERE
 
 [access values]
-
 #Access maps to this section to enable multiple access mappings
 O=1916130
+M=1916131
 
 [droid mapping]
 
-File Name=NAME
-File Location=FILE_PATH
+File Original Name=NAME
 File Original Path=FILE_PATH
-Modification Date=LAST_MODIFIED
+File Modification Date (General File Characteristics)=LAST_MODIFIED
+MD5=MD5_HASH
 
 [path values]
-
-pathmask=C:\Documents and Settings\spencero\Desktop\processing-workshop\Mahara Okeroa - E1 - distilled\
-subseriesmask=C:\Documents and Settings\spencero\Desktop\processing-workshop\Mahara Okeroa - E1 - distilled\E1\
+pathmask=M:\CAA\3rd_try\WORK_COPY\
+subseriesmask=M:\CAA\3rd_try\WORK_COPY\
 
 [rosetta csv fields]  
-#rosetta fields go here, but also need to be reflected in rosetta-csv-validation-schema-anz.json
-#NOTE: No spaces allowed between lists
-#TODO: Possibly allow spaces between lists
-
 CSVSECTIONS=IE,REPRESENTATION,FILE
 
-IE = Title,Access,Archway Identifier for publishing,Archway Identifier Type,Archway Identifier Value,Series,Agency,Entity Type,Submission Reason,Event Identifier Type,Event Identifier Value,Event Type,Event Description,Event Date,Event Outcome1,Event Outcome Detail1,Event Outcome Detail Extension1,Event Outcome2,Event Outcome Detail2,Event Outcome Detail Extension2,Event Outcome3,Event Outcome Detail3,Event Outcome Detail Extension3
-REPRESENTATION = Revision Number,Usage Type,Preservation Type,Digital Original
-FILE = File Location,File Original Path,File Name,File fixity type,File fixity value,Modification Date,Creation Date
+IE = Title (DC),Access Rights Policy ID (IE),Archway Unique ID (Object Identifier),Identifier - Archway Unique Id (DC),Archway Series Number,Provenance (dcterms),IE Entity Type,Submission Reason,Event Identifier Type,Event Identifier Value,Event Type,Event Description,Event Date,Event Outcome1,Event Outcome Detail1,Event Outcome Detail Extension1,Event Outcome2,Event Outcome Detail2,Event Outcome Detail Extension2,Event Outcome3,Event Outcome Detail3,Event Outcome Detail Extension3
+REPRESENTATION = Revision Number,Usage Type,Representation Code,Preservation Type,Digital Original
+FILE = File Original Path,File Original Name,File Label,MD5,File Modification Date (General File Characteristics),File Creation Date (General File Characteristics)
